Updated product controller in filter method

--- a/Views/Product/Search.cshtml
+++ b/Views/Product/Search.cshtml
@@ -1,6 +1,6 @@
 ﻿@model List<Product>
 @{
-    ViewData["Title"] = "Page";
+    ViewData["Title"] = "Search";
 }
 
 @await Component.InvokeAsync("Product",Model)
