--- a/Views/Shared/_ProductFeedbackPartial.cshtml
+++ b/Views/Shared/_ProductFeedbackPartial.cshtml
@@ -17,8 +17,7 @@ ViewData["Title"] = "View";
 </div>
 <textarea cols="30" rows="6" asp-for="Text" 
    placeholder="Write Your Review Here..." class="form-control"
-   id="review">
-                                                        </textarea>
+   id="review"></textarea>
 <input multiple asp-for="Files"/>
 <div class="form-group">
    <input type="checkbox" class="custom-checkbox"
