--- a/Views/Shared/Components/Product/Default.cshtml
+++ b/Views/Shared/Components/Product/Default.cshtml
@@ -305,7 +305,8 @@
                                                </div>
                                                     
                                                <button  type="submit" @*asp-controller="product" asp-action="index" asp-route-minPrice="@ViewData["MinPrice"]" asp-route-maxPrice="@ViewData["MaxPrice"]"*@
-                                                    class="btn btn-primary btn-rounded">Go</button>
+                                                    class="btn btn-primary btn-rounded">Go
+                                                </button>
                                             </form>
 @*                                            <form asp-controller="product" asp-action="PriceFilter" >
                                                     <input type="number" name="maxPrice" value="@ViewData["MaxPrice"]" class="max_price text-center" 
